Wed Oct 13 11:18:45 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * docs/compiler.html:
          Explained the -Gexr option.

Wed Oct 13 06:27:40 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exs.cpp:
        * TAO_IDL/be_include/be_global.h:
          Added another option to the -Gex option. When a user
          passes -Gexr, the TAO IDL compiler will generate an extra
          method in the executor class which retrieves the ACE_Reactor
          of the ORB of the Component. When the reactor
          can't be retrieved, a CORBA::INTERNAL exception will be thrown.

          Also removed the comments which states where the code
          has been generated in the TAO IDL compiler.

Tue Oct 12 14:18:00 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tao/Codeset/Codeset.mpc:

          Need to explicitly list the Template_Files after the MPC bug fix
          from Mon Oct 11 20:40:13 UTC 2010.

Tue Oct 12 13:15:30 UTC 2010  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/ast/ast_component.cpp:
        * TAO_IDL/ast/ast_home.cpp:
        * TAO_IDL/ast/ast_interface.cpp:
        * TAO_IDL/ast/ast_module.cpp:
        * TAO_IDL/ast/ast_valuetype.cpp:
        * TAO_IDL/include/ast_component.h:
        * TAO_IDL/include/ast_home.h:
        * TAO_IDL/include/ast_interface.h:
        * TAO_IDL/include/ast_module.h:
        * TAO_IDL/include/ast_valuetype.h:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/include/utl_scope.h:
        * TAO_IDL/util/utl_global.cpp:
        * TAO_IDL/util/utl_scope.cpp:
        * tests/IDL_Test/invalid_scoping1.idl: (renamed from invalid_scoping.idl)